# agent-fn-wrap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_fn_wrap/: __init__.py  core.py
src/agent_fn_wrap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_fn_wrap.py
